# diffusion-irregular-ehr

./: .gitignore  .gitmodules  README.md  conftest.py  experiment.py  main.py  pyproject.toml  train.py
.github/: pull_request_template.md  python-ci.yml
.github/workflows/: python-ci.yaml
checkpoints/: best_model_diffpo_conf_2026-07-24T14_54_58.pth  best_model_diffpo_full_2026-07-23.pth  best_model_diffpo_full_2026-07-24T11_32_09.pth  best_model_diffpo_full_2026-07-24T13_13_03.pth  best_model_diffpo_full_2026-07-24T14_29_42.pth  final_model_diffpo_conf_2026-07-24T14_54_58.pth  final_model_diffpo_full_2026-07-24T14_29_42.pth
config/: ihdp.yaml
data/ihdp/: add_race.py  exploration.ipynb
data/ihdp/with_race/: ihdp_with_race_1.csv  (+9 more)
results/: analysis.ipynb  preds_diffpo_conf_2026-07-24T14_54_58.csv  preds_diffpo_full_2026-07-24T13_13_03.csv  preds_diffpo_full_2026-07-24T14_29_42.csv  results_diffpo_conf_2026-07-24T14_54_58.json  results_diffpo_full_2026-07-23.json  results_diffpo_full_2026-07-24T11_32_09.json  results_diffpo_full_2026-07-24T13_13_03.json  results_diffpo_full_2026-07-24T14_29_42.json
src/: auxiliary.py  config.py  data.py  decoders.py  denoiser.py  encoder.py  metrics.py  model.py  propensity.py
tests/: test_auxiliary.py  test_data.py  test_decoders.py  test_denoiser.py  test_diffpo.py  test_encoder.py  test_experiment.py  test_metrics.py  test_model.py  test_propensity.py  test_training.py
wandb/: latest-run
wandb/run-20260723_221539-diffpo_full_2026-07-23/: run-diffpo_full_2026-07-23.wandb
wandb/run-20260724_113209-diffpo_full_2026-07-24T11_32_09/: run-diffpo_full_2026-07-24T11_32_09.wandb
(+21 files in other folders)
