[project]
name = "diffusion-irregular-ehr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyro-ppl>=1.9.1",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "wandb>=0.28.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "isort>=8.0.1",
    "pyreadr>=0.5.6",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
exclude = ["DiffPO"]
